update cf.sh to use encoded zip instead of trying to parse individual json configs into an xml. add cf package and java package.